Delete styling due to text align issue
I could not align text properly due to
the column direction, so I will approach it
using block instead.

--- a/style.css
+++ b/style.css
@@ -75,20 +75,3 @@ a {
     background-color: #E5E7EB;
 }
 
-.s4b1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 100px 350px 100px 350px;
-}
-
-.s4b1 .quote-4 {
-    font-size: 36px;
-    color: #1F2937;
-    font-weight: 300;
-}
-
-.s4b1 .s4q2 {
-    text-align: right;
-}
